libraries/ckit/regression/valid-programs/a18.c
f() {
 int i = 1;
}

main () {
  int j;
  j = sizeof(5);
}
